# ai-pdf-chat

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  streamlit_app.py
app/: cli.py  embeddings.py  ingest.py  llm.py  rag.py  search.py  setup_vector_store.py  vector_store.py
