[project]
name = "ai-pdf-chat"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "chromadb>=1.5.9",
    "fastapi>=0.138.0",
    "groq>=0.37.1",
    "langchain>=1.3.11",
    "langchain-community>=0.4.2",
    "langchain-groq>=1.1.3",
    "langchain-text-splitters>=1.1.2",
    "pypdf>=6.14.2",
    "python-dotenv>=1.2.2",
    "sentence-transformers>=5.6.0",
    "streamlit>=1.58.0",
    "torchvision>=0.27.1",
    "uvicorn>=0.49.0",
]
